# etf-allocation-bandit

./: .gitignore  1_Building_dataset.ipynb  1_ETF_Tagging.ipynb  2_Building_dataset.ipynb  2_ETF_Tagging.ipynb  3_Non_Contextual.ipynb  4_Contextual_studentt.ipynb  CLAUDE.md  README.md  environment.yml  pyproject.toml
data/: categorized_df.csv  manually_tagged.csv  needs_review_etfs.csv
data/Covariates/: DGS10.csv  meta.csv  tagged_final.csv
scripts/: run_contextual.py
src/etf_bandit/: __init__.py  backtest.py  beliefs.py  config.py  features.py  models_contextual.py  models_studentt.py  panel.py  paths.py  policy.py  tagging.py  volatility.py
tests/: test_features.py  test_policy.py  test_volatility.py
